# Simpato

./: .gitignore  CMakeLists.txt  README.md  dev_doc.txt
src/: item_view.cpp  item_view.h  item_view.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  note_view.cpp  note_view.h  note_view.ui
